[tool.poetry]
name = "bubblegum"
version = "0.4.1"
description = "A script to make and manage uploads to image hosts."
authors = ["azuline <azuline@riseup.net>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/azuline/bubblegum"
keywords = ["image-uploader"]

[tool.poetry.scripts]
bubblegum = 'bubblegum.__main__:commands'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
requests = "^2.0"
pyperclip = "^1.7"
appdirs = "^1.4"

[tool.poetry.dev-dependencies]
isort = "^4.3"
flake8 = "^3.6"
yapf = "^0.25.0"
pytest = "^4.1"
mock = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
